<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_appointments"
        android:icon="@drawable/ic_nav_calendar"
        android:title="@string/nav_appointments" />
    <item
        android:id="@+id/nav_consult"
        android:icon="@drawable/ic_nav_consult"
        android:title="@string/nav_consult" />
    <item
        android:id="@+id/nav_messages"
        android:icon="@drawable/ic_nav_messages"
        android:title="@string/nav_messages" />
    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/ic_nav_account"
        android:title="@string/nav_account" />
</menu>
