<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/doctor_nav_appointments"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/doctor_nav_appointments" />
    <item
        android:id="@+id/doctor_nav_requests"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/doctor_nav_requests" />
    <item
        android:id="@+id/doctor_nav_examining"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/doctor_nav_examining" />
    <item
        android:id="@+id/doctor_nav_account"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/doctor_nav_account" />
</menu>
